反馈问题修复

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,6 +251,7 @@ confirmation after plug in your car。</string>
     <string name="m192_via_bluetooth">Via Bluetooth</string>
     <string name="m193_via_server">Via Server</string>
     <string name="m194_not_yet_open">Not yet open</string>
+    <string name="m195_disconnection">Disconnection</string>
 
 
 
