--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,6 +270,7 @@ confirmation after plug in your car。</string>
     <string name="m209_home_power_current">Home Power Current</string>
     <string name="m210_power_meter_address">Power Meter Address</string>
     <string name="m211_manual_input">manual input</string>
+    <string name="m212_update">update</string>
 
 
 
