--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,5 +274,19 @@ confirmation after plug in your car。</string>
 
 
 
+    <string name="m213_swwifi">WiFi</string>
+    <string name="m214_4g">4G</string>
+    <string name="m215_lan">LAN</string>
+
+
+    <string name="m216_ip_address">IP Address</string>
+    <string name="m217_subnet_mask">Subnet Mask</string>
+    <string name="m218_default_gateway">Default Gateway</string>
+    <string name="m219_dns">DNS</string>
+    <string name="m220_lan_dhcp">LAN DHCP</string>
+
+
+
+
 
 </resources>
