--- a/lib/src/main/res/values/strings.xml
+++ b/lib/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="network_error">网络异常，请稍后重试</string>
-    <string name="parse_error">解析异常</string>
+    <string name="network_error">Network exception, please try again later</string>
+    <string name="parse_error">parsing exception</string>
 
     <!--    <string name="app_name">CP Tool</string>-->
     <string name="devices">Bluetooth Devices</string>
